# phi-redactor

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
history/prompts/001-phi-redaction-proxy/: 001-phi-redactor-spec-creation.spec.prompt.md  002-architecture-plan-creation.plan.prompt.md  002-architecture-technology-research.general.prompt.md  002-hipaa-compliance-audit-trail-research.general.prompt.md  002-llm-api-proxy-architecture-research.general.prompt.md  003-task-generation-implementation.tasks.prompt.md  004-shared-models-and-config-implementation.green.prompt.md  005-detection-engine-and-registry-implementation.green.prompt.md  005-semantic-masking-engine-implementation.green.prompt.md  006-vault-and-audit-implementation.green.prompt.md  007-cli-entry-points-implementation.green.prompt.md  008-proxy-layer-fastapi-implementation.green.prompt.md  009-write-seven-test-files.green.prompt.md  010-session-config-cli-vault-safe-harbor.green.prompt.md  011-dashboard-polish-phase-11-12.green.prompt.md  012-fhir-hl7-plugin-system-phase-9-10.green.prompt.md
specs/001-phi-redaction-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phi-redaction-proxy/checklists/: requirements.md
src/phi_redactor/: __init__.py  __main__.py  config.py  models.py
tests/: conftest.py
tests/integration/: test_compliance.py  test_detection_benchmark.py  test_masking_quality.py  test_proxy_anthropic.py  test_proxy_openai.py  test_session_consistency.py  test_vault_isolation.py
tests/unit/: test_audit.py  test_dashboard.py  test_date_shifter.py  test_detection.py  test_fhir_hl7.py  test_hipaa_recognizers.py  test_identity_clustering.py  test_masking.py  test_plugins.py  test_streaming.py  test_vault.py  test_vault_encryption.py
(+52 files in other folders)
