[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-redactor"
version = "0.1.0"
description = "HIPAA-native PHI redaction proxy for AI/LLM interactions"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Dilawar Shafiq", email = "dilawar.gopang@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
keywords = ["phi", "hipaa", "redaction", "llm", "proxy", "healthcare", "de-identification"]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "faker>=40.0.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "hypothesis>=6.98.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
phi-redactor = "phi_redactor.cli.main:cli"

[project.urls]
Homepage = "https://github.com/dilawar-gopang/phi-redactor"
Documentation = "https://github.com/dilawar-gopang/phi-redactor#readme"
Repository = "https://github.com/dilawar-gopang/phi-redactor"
Issues = "https://github.com/dilawar-gopang/phi-redactor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phi_redactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
